# cookiecutter-render-engine-site

./: LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: tests.yml
content/: example_page.md
content/blog/: example_blog_post.md
templates/: check_for_collections.html
tests/: test_template.py
{{cookiecutter.project_slug}}/: ExampleGitHubAction.yml  ExampleGitHubActionUV.yml  README.md  app.py  pyproject.toml
{{cookiecutter.project_slug}}/content/blog/: example_blog_post.md
{{cookiecutter.project_slug}}/content/pages/: example_page.html
{{cookiecutter.project_slug}}/static/: style.css
{{cookiecutter.project_slug}}/templates/: _base.html  index.html  page.html  site_vars.html
