[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_cookie_cutter"
dynamic = ["version"]
description = "Cookie Cutter template for Render Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pip-tools"
]


[tool.setuptools_scm]
local_scheme = "no-local-version"
# version_scheme = "python-simplified-semver"

[project.urls]
homepage = "https://github.com/render-engine/render_engine/"
repository = "https://github.com/render-engine/cookiecutter-render-engine-site/"
documentation = "https://render-engine.readthedocs.io/en/latest/"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
target-version = "py312"
line-length = 120
